--- a/Troy/examples/WhitneyMusicBox.html
+++ b/Troy/examples/WhitneyMusicBox.html
@@ -1,122 +1,230 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Whitney Music Box in HTML5</title>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<!-- shim -->
-	<script src="../inc/shim/Base64.js" type="text/javascript"></script>
-	<script src="../inc/shim/Base64binary.js" type="text/javascript"></script>
-	<script src="../inc/shim/WebAudioAPI.js" type="text/javascript"></script>
-	<!-- midi.js package -->
-	<script src="../js/midi/audioDetect.js" type="text/javascript"></script>
-	<script src="../js/midi/gm.js" type="text/javascript"></script>
-	<script src="../js/midi/loader.js" type="text/javascript"></script>
-	<script src="../js/midi/plugin.audiotag.js" type="text/javascript"></script>
-	<script src="../js/midi/plugin.webaudio.js" type="text/javascript"></script>
-	<script src="../js/midi/plugin.webmidi.js" type="text/javascript"></script>
-	<script src="../js/midi/player.js" type="text/javascript"></script>
-	<!-- utils -->
-	<script src="../js/util/dom_request_xhr.js" type="text/javascript"></script>
-	<script src="../js/util/dom_request_script.js" type="text/javascript"></script>
-	<!-- includes -->
-	<script src="./inc/timer.js" type="text/javascript"></script>
-	<!-- font -->
-	<link href="http://fonts.googleapis.com/css?family=Andada" rel="stylesheet" type="text/css" />
-	<style>
-		body {
-			background: #000; color: #fff; font-family: andada; line-height: 1.5em;
-		}
-		a {
-			color: #fff
-		}
-	</style>
-</head>
-<body>
-Whitney Music Box animation in HTML5.<br>
-Graphics code by <a href="https://github.com/jbum/Whitney-Music-Box-Examples">Jim Bumgardner</a>.<br>
-Audio created with <a href="https://github.com/mudx/MIDI.js">MIDI.js</a><br>
-<canvas id="mycanvas" />
-<script type="text/javascript">
+	<head>
+		<title>three.js webgl - custom attributes [particles]</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<style>
+			body {
+				color: #ffffff;
+				font-family:Monospace;
+				font-size:13px;
+				text-align:center;
+				font-weight: bold;
 
-var dc;
-var nbrPoints = 12;
-var cycleLength = 10 * 3; // 3 minutes
-var gw = 1080;
-var gh = 1080;
-var cx = gw / 2;
-var cy = gh / 2;
-var circleRadius = (gw / 2) * 0.95;
-var startTime = (new Date()).getTime();
-var PI = 3.1415927;
-var PI2 = PI * 2;
-var tines = [];
-var lastSound = [];
-
-RefreshFrame = function () {
-	dc.clearRect(0, 0, gw, gh);
-	dc.lineWidth = 3;
-	dc.strokeStyle = '#333';
-	dc.beginPath();
-	dc.moveTo(cx, cy);
-	dc.lineTo(gw, cy);
-	dc.stroke();
-	var speed = (2 * PI * nbrPoints) / cycleLength;
-	var ms = (new Date()).getTime();
-	var timer = (ms - startTime) * .001 * speed;
-	var maxRad = (gw / 2 - circleRadius) * .75;
-	var minRad = maxRad * .2;
-	for (var i = 0; i < nbrPoints; ++i) {
-		var r = (i + 1) / nbrPoints;
-		var a = timer * r;
-		var len = circleRadius * (1 + 1.0 / nbrPoints - r);
-		if (Math.floor(a / PI2) !== Math.floor(tines[i] / PI2)) {
-			MIDI.noteOn(0, i + 21, 100, 0);
-			MIDI.noteOn(0, i + 21 + 36, 100, 0);
-			MIDI.noteOff(0, i + 21, 0.1);
-			MIDI.noteOff(0, i + 21 + 36, 0.1);
-			lastSound[i] = ms;
-		}
-		var x = (cx + Math.cos(a) * len);
-		var y = (cy + Math.sin(a) * len);
-		var radv = minRad + (maxRad - minRad) * (1 - r);
-		radv = Math.max((radv + 6) - 6 * (ms - lastSound[i]) / 500.0, radv);
-		var huev = r * 360;
-		var satv = Math.round(100 * Math.min(1, (ms - lastSound[i]) / 1000.0));
-		var lumv = Math.round(100 * Math.max(0.5, 1 - (ms - lastSound[i]) / 1000.0));
-		dc.fillStyle = 'hsla(' + huev + ',' + satv + '%,' + lumv + '%,1)';
-		dc.beginPath();
-		dc.arc(x, y, radv, 0, PI2, false);
-		dc.fill();
-		tines[i] = a;
-	}
-};
-
-window.onload = function () {
-	MIDI.loader = new sketch.ui.Timer;
-	MIDI.loadPlugin({
-		soundfontUrl: "./soundfont/",
-		instrument: "acoustic_grand_piano", // or multiple instruments
-		onprogress: function(state, progress) {
-			MIDI.loader.setValue(progress * 100);
-		},
-		onsuccess: function() {
-			var canvas = document.getElementById('mycanvas');
-			canvas.style.width = gw + "px";
-			canvas.style.width = gw + "px";
-			canvas.width = gw;
-			canvas.height = gh;
-			dc = canvas.getContext('2d');
-			for (var i = 0; i < nbrPoints; ++i) {
-				if (i % 7 === 0) MIDI.noteOn(0, i + 21, 100, 0);
-				lastSound[i] = 0;
-				tines[i] = 0;
+				background-color: #000000;
+				margin: 0px;
+				overflow: hidden;
 			}
-			startTime = (new Date()).getTime();
-			setInterval(RefreshFrame, 1000 / 30);
-		}
-	});
-};
+			#info {
+				color: #fff;
+				background-color: rgba( 0, 0, 0, 0.75 );
+				position: relative;
+				top: 0px; width: 100%;
+				padding: 5px;
+				z-index:100;
+				width:33em;
+				margin:0 auto -2em;
+			}
+			a { color: #ff0000 }
+		</style>
+	</head>
 
-</script>
+	<body>
+		<div id="info"><a href="http://threejs.org" target="_blank">three.js</a> - custom attributes example - particles</div>
+		<div id="container"></div>
+
+		<script src="../build/three.min.js"></script>
+
+		<script src="js/Detector.js"></script>
+		<script src="js/libs/stats.min.js"></script>
+
+		<script type="x-shader/x-vertex" id="vertexshader">
+
+			uniform float amplitude;
+			attribute float size;
+			attribute vec3 customColor;
+
+			varying vec3 vColor;
+
+			void main() {
+
+				vColor = customColor;
+
+				vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 );
+
+				//gl_PointSize = size;
+				gl_PointSize = size * ( 300.0 / length( mvPosition.xyz ) );
+
+				gl_Position = projectionMatrix * mvPosition;
+
+			}
+
+		</script>
+
+		<script type="x-shader/x-fragment" id="fragmentshader">
+
+			uniform vec3 color;
+			uniform sampler2D texture;
+
+			varying vec3 vColor;
+
+			void main() {
+
+				gl_FragColor = vec4( color * vColor, 1.0 );
+				gl_FragColor = gl_FragColor * texture2D( texture, gl_PointCoord );
+
+			}
+
+		</script>
+
+
+		<script>
+
+		if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
+
+		var renderer, scene, camera, stats;
+
+		var sphere, uniforms, attributes;
+
+		var noise = [];
+
+		var WIDTH = window.innerWidth;
+		var HEIGHT = window.innerHeight;
+
+		init();
+		animate();
+
+		function init() {
+
+			camera = new THREE.PerspectiveCamera( 40, WIDTH / HEIGHT, 1, 10000 );
+			camera.position.z = 300;
+
+			scene = new THREE.Scene();
+
+			attributes = {
+
+				size: {	type: 'f', value: [] },
+				customColor: { type: 'c', value: [] }
+
+			};
+
+			uniforms = {
+
+				amplitude: { type: "f", value: 1.0 },
+				color:     { type: "c", value: new THREE.Color( 0xffffff ) },
+				texture:   { type: "t", value: THREE.ImageUtils.loadTexture( "textures/sprites/spark1.png" ) },
+
+			};
+
+			var shaderMaterial = new THREE.ShaderMaterial( {
+
+				uniforms:       uniforms,
+				attributes:     attributes,
+				vertexShader:   document.getElementById( 'vertexshader' ).textContent,
+				fragmentShader: document.getElementById( 'fragmentshader' ).textContent,
+
+				blending:       THREE.AdditiveBlending,
+				depthTest:      false,
+				transparent:    true
+
+			});
+
+
+			var radius = 200;
+			var geometry = new THREE.Geometry();
+
+			for ( var i = 0; i < 100000; i ++ ) {
+
+				var vertex = new THREE.Vector3();
+				vertex.x = Math.random() * 2 - 1;
+				vertex.y = Math.random() * 2 - 1;
+				vertex.z = Math.random() * 2 - 1;
+				vertex.multiplyScalar( radius );
+
+				geometry.vertices.push( vertex );
+
+			}
+
+			sphere = new THREE.PointCloud( geometry, shaderMaterial );
+
+			var vertices = sphere.geometry.vertices;
+			var values_size = attributes.size.value;
+			var values_color = attributes.customColor.value;
+
+			for ( var v = 0; v < vertices.length; v++ ) {
+
+				values_size[ v ] = 10;
+				values_color[ v ] = new THREE.Color( 0xffaa00 );
+
+				if ( vertices[ v ].x < 0 )
+					values_color[ v ].setHSL( 0.5 + 0.1 * ( v / vertices.length ), 0.7, 0.5 );
+				else
+					values_color[ v ].setHSL( 0.0 + 0.1 * ( v / vertices.length ), 0.9, 0.5 );
+
+			}
+
+			scene.add( sphere );
+
+			renderer = new THREE.WebGLRenderer();
+			renderer.setPixelRatio( window.devicePixelRatio );
+			renderer.setSize( WIDTH, HEIGHT );
+
+			var container = document.getElementById( 'container' );
+			container.appendChild( renderer.domElement );
+
+			stats = new Stats();
+			stats.domElement.style.position = 'absolute';
+			stats.domElement.style.top = '0px';
+			container.appendChild( stats.domElement );
+
+			//
+
+			window.addEventListener( 'resize', onWindowResize, false );
+
+		}
+
+		function onWindowResize() {
+
+			camera.aspect = window.innerWidth / window.innerHeight;
+			camera.updateProjectionMatrix();
+
+			renderer.setSize( window.innerWidth, window.innerHeight );
+
+		}
+
+		function animate() {
+
+			requestAnimationFrame( animate );
+
+			render();
+			stats.update();
+
+		}
+
+		function render() {
+
+			var time = Date.now() * 0.005;
+
+			sphere.rotation.z = 0.01 * time;
+
+			for( var i = 0; i < attributes.size.value.length; i++ ) {
+
+				attributes.size.value[ i ] = 14 + 13 * Math.sin( 0.1 * i + time );
+
+
+			}
+
+			attributes.size.needsUpdate = true;
+
+			renderer.render( scene, camera );
+
+		}
+
+
+	</script>
+
 </body>
+
 </html>
