playtone() is now a function

--- a/JWindex.html
+++ b/JWindex.html
@@ -87,27 +87,8 @@
 
     <div id="main_div">
         <h1> <span class="assignment">COS426 Assignment 4<br></span> Particles </h1>
- 
-       <script type="text/javascript">
-		MIDI.loadPlugin({
-				soundfontUrl: "./soundfont/",
-				instrument: "acoustic_grand_piano",
-				onprogress: function(state, progress) {
-					console.log(state, progress);
-				},
-				onsuccess: function() {
-					var myCanvas = document.getElementById('canvas');
-					console.log("Line 30");
-					var delay = 0; // play one note every quarter second
-					var note = 50; // the MIDI note
-					var velocity = 127; // how hard the note hits
-					// play the note
-					MIDI.setVolume(0, 127);
-					MIDI.noteOn(0, note, velocity, delay);
-					MIDI.noteOff(0, note, delay + 0.75);
-				}
-		});			
-       </script>
+
+ 	<script src="js/basicTone.js"> </script>
 
        
        
