--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns = "http://www.w3.org/1999/xhtml">
 <head>
-    <title> COS426 Assignment 2 &mdash; Mesh Processing &mdash; Interactive</title>
+    <title> 3D Whitney Boxes   </title>
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<!-- polyfill -->
